--- a/_listings/apis.html
+++ b/_listings/apis.html
@@ -5,20 +5,22 @@ title: Streamdata.io API Gallery - Cluster
 
 {% assign listing_object = site.listings %}
 {% assign tag_slug = "listings" %}
-{% assign listing_type = "topics" %}
 
 <div class="shortMasthead  shortMasthead--extra-top-padding ">
+   <div class="shortMasthead__container">
+
      {% include api-listing-feature.html %}
+
+   </div>
 </div>
 
 <section class="taggedLinkCards">
 
    {% include api-tag-filter.html %}
 
-   {% include org-listing.html %}
+   {% include api-listing.html %}
 
 </section>
-
 <div class="submitApi__overflowContainer" data-submit-api="">
    <div class="submitApi submitApi--left-hand-image">
 
